# mlir-tutorial-cmake

./: .gitignore  CMakeLists.txt  README.md  _build.sh  _thirdparty-llvm.sh
.github/actions/setup-build/: action.yml
.github/workflows/: build-and-test.yml  buildAndTest.yml
lib/Conversion/PolyToStandard/: CMakeLists.txt  PolyToStandard.cpp  PolyToStandard.h  PolyToStandard.td
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.h  PolyDialect.td  PolyOps.cpp  PolyOps.h  PolyOps.td  PolyPatterns.td  PolyTraits.h  PolyTypes.h  PolyTypes.td
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  AffineFullUnrollPatternRewrite.cpp  AffineFullUnrollPatternRewrite.h  AffineUnroll.cpp  AffineUnroll.h  CMakeLists.txt  Passes.h  Passes.td
lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  MulToAdd.h  Passes.h
tests/: CMakeLists.txt  affine_loop_unroll.mlir  code_motion.mlir  control_flow_sink.mlir  cse.mlir  ctlz.mlir  ctlz_runner.mlir  ctlz_simple.mlir  lit.cfg.py  lit.site.cfg.py.in  mul_to_add.mlir  poly_canonicalize.mlir  poly_syntax.mlir  poly_to_llvm.mlir  poly_to_llvm_eval.mlir  poly_to_llvm_main.c  poly_to_standard.mlir  poly_verifier.mlir  sccp.mlir
tools/: CMakeLists.txt  tutorial-opt.cpp
